<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#44454F"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/settingsPg"
        android:layout_width="300dp"
        android:layout_height="85dp"
        android:text="@string/settings"
        android:textColor="#1B1919"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.96" />

    <Button
        android:id="@+id/highScore"
        android:layout_width="300dp"
        android:layout_height="85dp"
        android:text="@string/highScore"
        android:textColor="#151313"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/howToPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/newGame"
        android:layout_width="300dp"
        android:layout_height="85dp"
        android:text="@string/newGame"
        android:textColor="#1E1C1C"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/highScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/howToPlay"
        android:layout_width="300dp"
        android:layout_height="85dp"
        android:text="@string/howToPlay"
        android:textColor="#090808"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/settingsPg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gameTitle"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="46sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="291dp"
        android:layout_height="286dp"
        app:layout_constraintBottom_toTopOf="@+id/newGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>